consolidate logic between rook and bishop, fix comments